[package]
name = "dps-auth-session"
version = "0.2.0"
edition = "2021"
description = "Secure session token management utilities"
license = "MIT"
repository = "https://github.com/dimensionalpocket/dps-auth-session-rs"
authors = ["Dimensional Pocket <dimensionalpocket.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3.0"